// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > failure - inputs (.) 1`] = `
"
ℹ Output destination directory: "tmp"

 ERROR  Question Error: "value" is required but found empty value

  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}



"
`;

exports[`generate > failure - inputs (.) 2`] = `
"
ℹ Output destination directory: "tmp"

 ERROR  Question Error: "choice" must be one of "A, B, C"

  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}
  {stacktrace}



"
`;

exports[`generate > success - basic (.) 1`] = `
"
ℹ Output destination directory: "tmp"

🐶 Generated 2 files!

     ✔ tmp/static.txt
     ✔ tmp/nest/output.txt

"
`;

exports[`generate > success - basic (.) 2`] = `
[
  {
    "content": "static content",
    "path": "tmp/static.txt",
  },
  {
    "content": "basic
output
output.txt
tmp/nest/output.txt
.txt
tmp/nest",
    "path": "tmp/nest/output.txt",
  },
]
`;

exports[`generate > success - basic (override) 1`] = `
"
ℹ Output destination directory: "tmp/override"

🐶 Generated 2 files!

     ✔ tmp/override/static.txt
     ✔ tmp/override/nest/output.txt

"
`;

exports[`generate > success - basic (override) 2`] = `
[
  {
    "content": "static content",
    "path": "tmp/override/static.txt",
  },
  {
    "content": "basic
output
output.txt
tmp/override/nest/output.txt
.txt
tmp/override/nest",
    "path": "tmp/override/nest/output.txt",
  },
]
`;

exports[`generate > success - conditional-generate (false) 1`] = `
"
ℹ Output destination directory: "tmp/false"

🐶 Generated 1 file! (1 skipped)

     ✔ tmp/false/false.txt
     ⚠ tmp/false/true.txt (skipped)

"
`;

exports[`generate > success - conditional-generate (false) 2`] = `
[
  {
    "content": "If bool is false, output.",
    "path": "tmp/false/false.txt",
  },
]
`;

exports[`generate > success - conditional-generate (true) 1`] = `
"
ℹ Output destination directory: "tmp/true"

🐶 Generated 1 file! (1 skipped)

     ✔ tmp/true/true.txt
     ⚠ tmp/true/false.txt (skipped)

"
`;

exports[`generate > success - conditional-generate (true) 2`] = `
[
  {
    "content": "If bool is true, output.",
    "path": "tmp/true/true.txt",
  },
]
`;

exports[`generate > success - inputs (.) 1`] = `
"
ℹ Output destination directory: "tmp"

🐶 Generated 1 file!

     ✔ tmp/scaffdog.txt

"
`;

exports[`generate > success - inputs (.) 2`] = `
[
  {
    "content": "value: scaffdog
choice: B
path: tmp/scaffdog.txt",
    "path": "tmp/scaffdog.txt",
  },
]
`;

exports[`generate > success - inputs (deep/nest) 1`] = `
"
ℹ Output destination directory: "tmp/deep/nest"

🐶 Generated 1 file!

     ✔ tmp/deep/nest/e2e.txt

"
`;

exports[`generate > success - inputs (deep/nest) 2`] = `
[
  {
    "content": "value: e2e
choice: C
path: tmp/deep/nest/e2e.txt",
    "path": "tmp/deep/nest/e2e.txt",
  },
]
`;

exports[`generate > success - question (dist) 1`] = `
"
ℹ Output destination directory: "tmp/dist"

🐶 Generated 1 file!

     ✔ tmp/dist/result.txt

"
`;

exports[`generate > success - question (dist) 2`] = `
[
  {
    "content": "shorthand: input_shorthand
input: input_basic
input_with_initial: input_initial
input_if: input_true
input_if_with_initial: default
input_if_without_initial: 
bool: true
bool_with_true: false
bool_with_false: true
bool_if: true
bool_if_with_initial: true
bool_if_without_initial: false
list: A
list_with_initial: B
list_if: C
list_if_with_initial: B
list_if_without_initial: 
checkbox: A
checkbox_with_initial: B
checkbox_if_with_initial: B,C
checkbox_if_without_initial: ",
    "path": "tmp/dist/result.txt",
  },
]
`;

exports[`generate > success - vars (.) 1`] = `
"
ℹ Output destination directory: "tmp"

🐶 Generated 1 file!

     ✔ tmp/index.txt

"
`;

exports[`generate > success - vars (.) 2`] = `
[
  {
    "content": "raw: bar-baz
foo: BarBaz",
    "path": "tmp/index.txt",
  },
]
`;
